fix text alignment on new line

--- a/css/main.scss
+++ b/css/main.scss
@@ -249,6 +249,10 @@ h6 {
 	    		text-decoration: none;
 	    	}
     	}
+
+    	.fa-3x {
+    		margin-bottom: 30px;
+    	}
     }
 
 
